[package]
name = "clubcard"
authors = ["John M. Schanck <jschanck@mozilla.com>"]
version = "0.1.0"
license = "MPL-2.0"
repository = "https://github.com/jschanck/clubcard/"
description = "Clubcard is an exact membership query filter for static sets"
edition = "2021"

[dependencies]
bincode = "1.3.3"
log = "0.4.21"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.8"

[features]
builder = []
crlite = []
