[package]
name = "clubcard"
authors = ["John M. Schanck <jschanck@mozilla.com>"]
version = "0.2.0"
license = "MPL-2.0"
repository = "https://github.com/jschanck/clubcard/"
description = "Clubcard is an exact membership query filter for static sets"
edition = "2021"

[dependencies]
base64 = { version = "0.22.1", optional = true }
bincode = { version = "1.3.3", optional = true }
rand = { version = "0.8.5", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1", optional = true }
sha2 = { version = "0.10.8", optional = true }

[features]
builder = ["dep:rand"]
crlite = ["dep:sha2", "dep:bincode"]
crlite-builder = ["crlite", "builder", "dep:base64", "dep:serde_json"]

[dev-dependencies]
rand = "0.8.5"
sha2 = "0.10.8"
